hphp/hack/test/typecheck/shape_typedef_with_multiple_optional_tokens.php.exp
File "shape_typedef_with_multiple_optional_tokens.php", line 4, characters 5-5:
An expression is expected here. (Parsing[1002])
