hphp/hack/test/typecheck/shape_typedef_with_multiple_optional_tokens.php
<?hh

type ShapeWithOptionalField = shape(
  ???'a' => int
);
